fix footer policies text on mobile (#12489)

--- a/src/sass/misc/_footer.scss
+++ b/src/sass/misc/_footer.scss
@@ -104,7 +104,9 @@
         margin: 0;
 
         &-item {
-            display: inline-block;
+            display: flex;
+            align-items: center;
+            flex-wrap: wrap;
             margin: 0;
             line-height: 1rem;
 
